<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GuessTheAnimal</string>
    <string name="unsupported_language">Извините, этот язык не поддерживается</string>
    <string name="error">Ошибка!</string>
    <string name="domestic_animals">Домашние\\nживотные</string>
    <string name="forest_animals">Животные\\nлеса</string>
    <string name="african_animals">Животные\\nафрики</string>
    <string name="dinosaurs">Динозавры</string>
    <string name="games_for_kids">Развивашки для малышей</string>
    <string name="result">"Результат: "</string>
    <string name="slash">" / "</string>
    <string name="congrats_0">Попробуй еще!</string>
    <string name="congrats_1">Молодец!</string>
    <string name="congrats_2">Умница!</string>
    <string name="congrats_3">Потрясающе!</string>
    <string name="tap_again">Нажмите еще раз</string>
    <string name="colors">Цвета</string>
    <string name="digits">Числа</string>
    <string name="letters">Буквы</string>
    <string name="furniture">Предметы</string>
    <string name="image_main">image_main</string>
    <string name="image_next">image_next</string>
    <string name="image_start_quiz">image_start_quiz</string>
    <string name="to_main">На главную</string>
    <string name="image_prev" >image_prev</string>
    <string name="start_quiz">Начать игру?</string>
    <string name="tap_to_start_quiz">Нажми, чтобы\nначать квиз</string>
    <string name="fruits">Фрукты \nОвощи</string>
    <string name="figures">Фигуры</string>
</resources>