<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_background"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:id="@+id/tvLearnAnimals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airfool"
        android:text="@string/games_for_kids"
        android:textColor="@color/main_title"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLearnAnimals">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imDomestic"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/main_domestic" />

                    <TextView
                        android:id="@+id/tvDomestic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/suplexmentary_comic_nc"
                        android:text="@string/domestic_animals"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imForest"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/main_forest" />

                    <TextView
                        android:id="@+id/tvForest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/suplexmentary_comic_nc"
                        android:text="@string/forest_animals"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imAfrica"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/main_africa" />

                    <TextView
                        android:id="@+id/tvAfrica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/suplexmentary_comic_nc"
                        android:text="@string/african_animals"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imDino"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/main_dinosaur" />

                    <TextView
                        android:id="@+id/tvDino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:fontFamily="@font/suplexmentary_comic_nc"
                        android:paddingTop="8dp"
                        android:text="@string/dinosaurs"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imColors"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/main_colors" />

                    <TextView
                        android:id="@+id/tvColors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:fontFamily="@font/suplexmentary_comic_nc"
                        android:paddingTop="8dp"
                        android:text="@string/colors"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imDigits"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/main_digits" />

                    <TextView
                        android:id="@+id/tvDigits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:fontFamily="@font/suplexmentary_comic_nc"
                        android:paddingTop="8dp"
                        android:text="@string/digits"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imLetters"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/main_letters" />

                    <TextView
                        android:id="@+id/tvLetters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:fontFamily="@font/suplexmentary_comic_nc"
                        android:paddingTop="8dp"
                        android:text="@string/letters"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imFurniture"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/main_furniture" />

                    <TextView
                        android:id="@+id/tvFurniture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/suplexmentary_comic_nc"
                        android:text="@string/furniture"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainScroll">

        <ImageView
            android:id="@+id/imLanguageRU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_language_ru"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:id="@+id/imLanguageEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_language_en"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>